--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Pokédex</title>
 </head>
 
-<body class="bg-gradient-to-br from-white via-white to-transparent">
+<body class="bg-gradient-to-r from-gray-800 via-gray-900 to-black">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
